# moneyball2

./: .gitignore  pyproject.toml
moneyball2/etl/: etl.py
moneyball2/etl/db/: db.py  teams_operations.py
moneyball2/etl/requets_api_football/: teams_requests.py
